welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:22: error: Unmatched closing brace '}' ignored here
 }
 ^